initial CV website

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title>New Site</title>
     <link rel="icon" href="favicon.ico">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 
     <style media="screen">
       body {
-        background-image: url('images/city.png');
+        background-image: url('city.png');
         background-size: cover;
         height: 700px;
         background-repeat: no-repeat;
@@ -19,7 +19,7 @@
   <body>
     <div class="top-container" >
       <div class="cn">
-        <img class="swathi" src="images/swathi.png" alt="SWATHI">
+        <img class="swathi" src="swathi.png" alt="SWATHI">
         <h1>I'm Swathi Priya</h1>
         <p class="web">a web developer</p>
       </div>
@@ -31,7 +31,7 @@
       <div class="skill-row-1">
         <table>
           <tr>
-            <td><img class="img1" src="images/graduation.png" alt=""></td>
+            <td><img class="img1" src="graduation.png" alt=""></td>
             <td><p>I have completed my schooling in KMHSS.
               I have completed my UG in PSGRKC.
               I am pursuing my PG in BHARATHIAR UNIVERSITY.</p></td>
@@ -47,7 +47,7 @@
             <td><p>I have won the prizes in district level drawing competition.
             I have participated in <strong>National youth day Yoga Demo,
               Kerala flood rescue and relief operation.</strong></p></td>
-            <td><img class="img2" src="images/activities.png" alt=""></td>
+            <td><img class="img2" src="activities.png" alt=""></td>
           </tr>
         </table>
       </div>
@@ -57,7 +57,7 @@
       <div class="skill-row-3">
         <table>
           <tr>
-            <td><img class="img3" src="images/certificate.png" alt=""></td>
+            <td><img class="img3" src="certificate.png" alt=""></td>
             <td><p>I have completed <strong>Android Application Development with B+ Grade</strong>- Job Oriented
               Course conducted by maylancer techios(PVT)ltd.I have completed English Type Writing <strong>
                 Junior & Senior in Frist Class.</strong>Tamil Type Writing <strong>Junior & Senior in Second Class.</strong></p></td>
@@ -72,7 +72,7 @@
           <tr>
             <td><p>Html, CSS, Adobe XD, Bootstrap, PhotoShop, Basics of C C++ Java.
               And I have Soft Skills are Teaching, Adaptability, Time management, Hard Working.</p></td>
-            <td><img class="img4" src="images/timg.png" alt=""></td>
+            <td><img class="img4" src="timg.png" alt=""></td>
           </tr>
         </table>
       </div>
@@ -82,7 +82,7 @@
       <div class="skill-row-5">
         <table>
           <tr>
-            <td><img class="img5" src="images/hobbies.png" alt=""></td>
+            <td><img class="img5" src="hobbies.png" alt=""></td>
             <td><p>I really like to do painting in my free time. And also my hobbies are
               Drawing, Gardening, Reading Books, Art and Craft, Cooking</p></td>
           </tr>
@@ -92,7 +92,7 @@
 
       <h3>CONTACT DETAILS</h3>
       <div class="skill-row-6">
-        <img class="img6" src="images/contact.png" alt="">
+        <img class="img6" src="contact.png" alt="">
         <p id="p6">67, Mahakavi Nagar, Irugur, Coimbatore, Tamil Nadu - 641103.<br> Ph.no: 91+ 88705 94667</p>
         <button type="button" name="button" class="btn">Contact me</button> <br>
       </div>
