--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <style media="screen">
       body {
-        background-image: url('city.png');
+        background-image: url('city.jpg');
         background-size: cover;
         height: 700px;
         background-repeat: no-repeat;
